test/compiler_error/_transitive_error.exs
defmodule ZiglerTest.CompilerError.TransitiveError do
  use Zig, otp_app: :zigler

  ~Z"""
  pub const transitive_error = @import("_transitive_error.zig").transitive_error;
  """
end
